--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: postgres
     restart: always
     environment:
-      - POSTGRES_PASSWORD=YclH9QA5OXJq
+      - POSTGRES_PASSWORD={DB-Password}
     ports:
       - 5432:5432
     volumes:
